[gd_scene load_steps=38 format=3 uid="uid://bpvk8s82bk4rf"]

[ext_resource type="Script" path="res://src/scripts/entities/Player/Player.gd" id="1_6wu35"]
[ext_resource type="Texture2D" uid="uid://dcu3u58ocxnd6" path="res://src/assets/entities/player/player.png" id="2_k6fly"]
[ext_resource type="Script" path="res://src/scripts/common/StateMachine/StateMachine.gd" id="2_nlji6"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_idle.gd" id="3_3m83i"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/PlayerCommonStateLogic.gd" id="3_42ijn"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/PlayerInteractionLogic.gd" id="3_ktivm"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_moving.gd" id="4_dj7mp"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/PlayerAudioManager.gd" id="5_8ceya"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_jumping.gd" id="5_b4mjp"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_falling.gd" id="6_3es6h"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_dashing.gd" id="7_tbkgv"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_screaming.gd" id="8_4a2sr"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_dying.gd" id="9_yhsig"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_trampolined.gd" id="14_gv6ud"]
[ext_resource type="Script" path="res://src/scripts/entities/Player/States/state_blocked.gd" id="15_i52eo"]
[ext_resource type="FontFile" uid="uid://ddckps1108f3l" path="res://src/assets/UI/pixelart.ttf" id="16_v1562"]
[ext_resource type="FontFile" uid="uid://cy6qjro34vwe5" path="res://src/assets/UI/Pixelme.ttf" id="17_drslc"]
[ext_resource type="Texture2D" uid="uid://cq2d56fboonxf" path="res://src/assets/UI/dash.png" id="18_ckvg2"]
[ext_resource type="Texture2D" uid="uid://c01u2mkvpnw8p" path="res://src/assets/UI/speaker.png" id="18_jspmx"]
[ext_resource type="Script" path="res://src/scripts/common/UI/VAlign.gd" id="19_scvb5"]
[ext_resource type="Texture2D" uid="uid://daijh2djjgmtt" path="res://src/assets/UI/djump.png" id="19_txq1w"]
[ext_resource type="Texture2D" uid="uid://2o6wb0jjvxs1" path="res://src/assets/UI/scream.png" id="20_c314c"]
[ext_resource type="PackedScene" uid="uid://db8srgwfvm4y2" path="res://src/scenes/common/UI/PauseMenu.tscn" id="23_kjc5o"]

[sub_resource type="Animation" id="Animation_s75ks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="Animation" id="Animation_vvsqn"]
resource_name = "player_dashing"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 11]
}

[sub_resource type="Animation" id="Animation_7wkqf"]
resource_name = "player_dying"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 19]
}

[sub_resource type="Animation" id="Animation_e2hv3"]
resource_name = "player_falling"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 6, 7]
}

[sub_resource type="Animation" id="Animation_el33y"]
resource_name = "player_idle"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_jeagk"]
resource_name = "player_jumping"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}

[sub_resource type="Animation" id="Animation_mv4w8"]
resource_name = "player_moving"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}

[sub_resource type="Animation" id="Animation_hq0e8"]
resource_name = "player_screaming"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwa60"]
_data = {
"RESET": SubResource("Animation_s75ks"),
"player_dashing": SubResource("Animation_vvsqn"),
"player_dying": SubResource("Animation_7wkqf"),
"player_falling": SubResource("Animation_e2hv3"),
"player_idle": SubResource("Animation_el33y"),
"player_jumping": SubResource("Animation_jeagk"),
"player_moving": SubResource("Animation_mv4w8"),
"player_screaming": SubResource("Animation_hq0e8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2p2b1"]
radius = 5.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ympx"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l0mc3"]
radius = 19.0263

[sub_resource type="RichTextEffect" id="RichTextEffect_o4p1k"]
script = ExtResource("19_scvb5")

[sub_resource type="RichTextEffect" id="RichTextEffect_jnaix"]
script = ExtResource("19_scvb5")

[node name="Player" type="CharacterBody2D"]
z_index = 100
collision_mask = 31
script = ExtResource("1_6wu35")

[node name="Hint" type="RichTextLabel" parent="."]
visible = false
offset_left = -117.0
offset_top = -55.0
offset_right = 117.0
offset_bottom = -19.0
theme_override_colors/font_shadow_color = Color(0.176471, 0.176471, 0.176471, 1)
theme_override_fonts/normal_font = ExtResource("17_drslc")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center] This will be tutorial text"
fit_content = true
scroll_active = false

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_k6fly")
hframes = 5
vframes = 5
frame = 21

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_nwa60")
}

[node name="collisions" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_2p2b1")

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_4ympx")
debug_color = Color(0.996078, 0, 0.227451, 0.419608)

[node name="interact_radius" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="interact_radius_shape" type="CollisionShape2D" parent="interact_radius"]
shape = SubResource("CircleShape2D_l0mc3")
debug_color = Color(0.572549, 0.733333, 0.25098, 0.419608)

[node name="LogPlayer" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
volume_db = 5.0

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="InteractionLogicHolder" type="Node" parent="."]
script = ExtResource("3_ktivm")

[node name="StateLogicHolder" type="Node" parent="."]
script = ExtResource("3_42ijn")

[node name="AudioManager" type="Node2D" parent="."]
script = ExtResource("5_8ceya")

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_nlji6")
starting_state = NodePath("Falling")

[node name="Idle" type="Node" parent="state_machine" node_paths=PackedStringArray("falling_state", "moving_state", "jumping_state", "dashing_state", "dying_state", "screaming_state")]
script = ExtResource("3_3m83i")
falling_state = NodePath("../Falling")
moving_state = NodePath("../Moving")
jumping_state = NodePath("../Jumping")
dashing_state = NodePath("../Dashing")
dying_state = NodePath("../Dying")
screaming_state = NodePath("../Screaming")
animation_name = "player_idle"

[node name="Moving" type="Node" parent="state_machine" node_paths=PackedStringArray("jumping_state", "falling_state", "dashing_state", "screaming_state", "idle_state", "dying_state")]
script = ExtResource("4_dj7mp")
jumping_state = NodePath("../Jumping")
falling_state = NodePath("../Falling")
dashing_state = NodePath("../Dashing")
screaming_state = NodePath("../Screaming")
idle_state = NodePath("../Idle")
dying_state = NodePath("../Dying")
animation_name = "player_moving"

[node name="Jumping" type="Node" parent="state_machine" node_paths=PackedStringArray("falling_state", "dashing_state", "screaming_state", "dying_state")]
script = ExtResource("5_b4mjp")
falling_state = NodePath("../Falling")
dashing_state = NodePath("../Dashing")
screaming_state = NodePath("../Screaming")
dying_state = NodePath("../Dying")
animation_name = "player_jumping"

[node name="Falling" type="Node" parent="state_machine" node_paths=PackedStringArray("dashing_state", "screaming_state", "jumping_state", "dying_state", "idle_state", "moving_state")]
script = ExtResource("6_3es6h")
dashing_state = NodePath("../Dashing")
screaming_state = NodePath("../Screaming")
jumping_state = NodePath("../Jumping")
dying_state = NodePath("../Dying")
idle_state = NodePath("../Idle")
moving_state = NodePath("../Moving")
animation_name = "player_falling"

[node name="Dashing" type="Node" parent="state_machine" node_paths=PackedStringArray("falling_state", "dying_state", "screaming_state")]
script = ExtResource("7_tbkgv")
falling_state = NodePath("../Falling")
dying_state = NodePath("../Dying")
screaming_state = NodePath("../Screaming")
animation_name = "player_dashing"

[node name="Screaming" type="Node" parent="state_machine" node_paths=PackedStringArray("falling_state", "dying_state")]
script = ExtResource("8_4a2sr")
falling_state = NodePath("../Falling")
dying_state = NodePath("../Dying")
animation_name = "player_screaming"

[node name="Dying" type="Node" parent="state_machine" node_paths=PackedStringArray("falling_state")]
script = ExtResource("9_yhsig")
falling_state = NodePath("../Falling")
animation_name = "player_dying"

[node name="Trampolined" type="Node" parent="state_machine" node_paths=PackedStringArray("jumping_state", "falling_state", "dashing_state", "screaming_state", "dying_state", "idle_state")]
script = ExtResource("14_gv6ud")
jumping_state = NodePath("../Jumping")
falling_state = NodePath("../Falling")
dashing_state = NodePath("../Dashing")
screaming_state = NodePath("../Screaming")
dying_state = NodePath("../Dying")
idle_state = NodePath("../Idle")
animation_name = "player_jumping"

[node name="BLOCKED" type="Node" parent="state_machine"]
script = ExtResource("15_i52eo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 639.0
offset_bottom = 359.0

[node name="LevelName" type="RichTextLabel" parent="CanvasLayer/HUD"]
self_modulate = Color(0.243137, 0.337255, 0.498039, 1)
layout_mode = 0
offset_left = 12.0
offset_top = 9.0
offset_right = 214.0
offset_bottom = 50.0
theme_override_fonts/normal_font = ExtResource("16_v1562")
text = "Magazyn"

[node name="LevelName" type="RichTextLabel" parent="CanvasLayer/HUD/LevelName"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 203.0
offset_bottom = 42.0
theme_override_fonts/normal_font = ExtResource("16_v1562")
text = "Magazyn"

[node name="Timer" type="RichTextLabel" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_left = 583.0
offset_top = 10.0
offset_right = 641.0
offset_bottom = 49.0
theme_override_fonts/normal_font = ExtResource("17_drslc")
text = "12:37"

[node name="CurrentLog" type="HBoxContainer" parent="CanvasLayer/HUD"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 382.0
offset_top = 299.0
offset_right = 640.0
offset_bottom = 359.0
alignment = 2

[node name="audio" type="TextureRect" parent="CanvasLayer/HUD/CurrentLog"]
layout_mode = 2
texture = ExtResource("18_jspmx")
expand_mode = 2

[node name="logTitle" type="RichTextLabel" parent="CanvasLayer/HUD/CurrentLog"]
self_modulate = Color(0.329412, 0.568627, 0.403922, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("16_v1562")
bbcode_enabled = true
text = "[valign px=-10]Zaczynam się do niego przekonywać..."
custom_effects = [SubResource("RichTextEffect_o4p1k")]

[node name="logTitle" type="RichTextLabel" parent="CanvasLayer/HUD/CurrentLog/logTitle"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 195.0
offset_bottom = 62.0
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("16_v1562")
bbcode_enabled = true
text = "[valign px=-10]Zaczynam się do niego przekonywać..."
custom_effects = [SubResource("RichTextEffect_jnaix")]

[node name="Skills" type="HBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 328.0
offset_right = 126.0
offset_bottom = 360.0

[node name="Dash" type="TextureRect" parent="CanvasLayer/HUD/Skills"]
visible = false
layout_mode = 2
texture = ExtResource("18_ckvg2")
expand_mode = 2

[node name="DJump" type="TextureRect" parent="CanvasLayer/HUD/Skills"]
visible = false
layout_mode = 2
texture = ExtResource("19_txq1w")
expand_mode = 3

[node name="Scream" type="TextureRect" parent="CanvasLayer/HUD/Skills"]
visible = false
layout_mode = 2
texture = ExtResource("20_c314c")
expand_mode = 2

[node name="PauseMenu" parent="." instance=ExtResource("23_kjc5o")]
visible = false

[connection signal="area_entered" from="hitbox" to="StateLogicHolder" method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="StateLogicHolder" method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="interact_radius" to="InteractionLogicHolder" method="_on_interact_radius_area_entered"]
[connection signal="area_exited" from="interact_radius" to="InteractionLogicHolder" method="_on_interact_radius_area_exited"]
